# minesweeper-multiplayer

./: .gitignore  CMakeLists.txt  Makefile  init.bat
MineSweeperClient/: CMakeLists.txt
MineSweeperClient/include/: game.h
MineSweeperClient/old_src/: case.cpp  main.cpp
MineSweeperClient/src/: Cell.h  CellRenderer.cpp  CellRenderer.h  GameState.cpp  GameState.h  MainWindow.cpp  MainWindow.h  UdpClient.cpp  UdpClient.h  case.h  game.cpp  main.cpp
MinesweeperServer/: CMakeLists.txt  init.bat
MinesweeperServer/src/: Cell.cpp  Cell.h  Game.cpp  Game.h  UdpServer.cpp  UdpServer.h  main.cpp
src/Client/: CellRenderer.cpp  CellRenderer.h  MainWindow.cpp  MainWindow.h  UISettings.cpp  UISettings.h  UdpClient.cpp  UdpClient.h  main.cpp
src/Common/: Cell.h  GameState.cpp  GameState.h
src/Server/: Client.h  UdpServer.cpp  UdpServer.h  main.cpp
